Fixing issues with color contrast, footer, and permalinks

--- a/assets/_sass/component/_page-footer.scss
+++ b/assets/_sass/component/_page-footer.scss
@@ -32,8 +32,7 @@
       display: inline-block;
     }
 
-    object {
-      pointer-events: none;
+    .instagram {
       width: 2rem;
     }
   }
