--- a/assets/_sass/component/_post.scss
+++ b/assets/_sass/component/_post.scss
@@ -23,7 +23,7 @@
   }
 
   .date {
-    color: darken( $queenpink, 40% );
+    color: darken( $queenpink, 50% );
     font-family: $sans;
     font-size: 0.95rem;
     margin-bottom: 1rem;
